--- a/MundoAxin/axin/compare/static/scss/_global.scss
+++ b/MundoAxin/axin/compare/static/scss/_global.scss
@@ -4,5 +4,11 @@ $color-navbar: #F7F0F6;
 $color-pink-font: #E8D8E5;
 $color-buttom: #9B0071;
 $color-white: #FFFFFF;
-$color-font-pink: #F06292;
+$color-font-pink: black;
 $color-gray-p: #566573;
+
+
+$color-dorado:#C89F29;
+$color-fondo:#FFF7FF;
+
+$color-pink:#e0bcbf;
