--- a/MundoAxin/axin/compare/templates/products/index.html
+++ b/MundoAxin/axin/compare/templates/products/index.html
@@ -8,50 +8,19 @@
           integrity= "sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
           crossorigin= "anonymous"
         >
-        <link rel= "stylesheet" type="text/css" href="/static/css/styles.css">
+        <link rel= "stylesheet" type="text/css" href="/static/css/index.css">
 
     </head>
     <body>
-        <header>
-            <nav class="navbar navbar-expand-lg fixed-top navbar-light">
-                <a class="navbar-brand" href="#">
-                    <img src="/static/logos/logo.jpeg" alt="Mundo Axin" />
-                </a>
-                <button
-                    class="navbar-toggler"
-                    type="button"
-                    data-toggle="collapse"
-                    data-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation"
-                >
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mx-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="/">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/">Maquillaje</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/compare">Lista de Deseos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/list">ofertas</a>
-                        </li>
-                    </ul>
-                    <form class="form-inline my-2 my-lg-0 actions justify-content-end">
-                        <input id="addSerch" type="search" placeholder="&iquest;Que deseas buscar&quest;" ></input>
-                        <button id="buttonSerch">Ingresar</button>
-                    </form>
-                </div>
-            </nav>
-        </header>
+       {% include "products/header.html" %}
+
+        <form class=form-search>
+            <input class="input-search" type="search" placeholder="Busca un producto" aria-label="Search">
+            <button class="button-search" type="submit">Buscar</button>
+        </form>
+
         <main class="main-container">
-            <div class="main-item-text ">
+            <div class="main-item-text">
                 <h1 id="mainText">Encuentra el mejor precio del producto que deseas.</h1>
                 <p>
                     Compara los precios de los articulos de maquillaje que mas te gusten, <strong>Mundo Axin</strong>
@@ -60,20 +29,52 @@
                 </p>
 
                 <h3>¡Obten ofertas exclusivas! </h3>
-                <h4>Registrate</h4>
-                <form class="signup-form">
-                    <input type="email" placeholder="Introduce tu correo"/>
-                    <button type="submit">
-                        Ingresar &rarr;
+                
+                <form>
+                    <button>
+                        <a href="/register/">Registrate &rarr;</a>
                     </button>
                 </form>
-
             </div>
-            <div class="main-item-image">
-                <img src="/static/logos/face.jpg" alt="Foto artistica" />
-            </div>
+            <article class="main-item-carousel">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="/static/logos/publilor.jpg"class="d-block w-100" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img src= "/static/logos/publirevlon.jpg" class="d-block w-100" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img src= "/static/logos/publimac.jpg" class="d-block w-100" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img src= "/static/logos/publimay.jpg" class="d-block w-100" alt="">
+                        </div>
+                        <div class="carousel-item">
+                            <img src= "/static/logos/publiUrban.jpg" class="d-block w-100" alt="">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </article>
         </main>
-
+        <h4 class="title">Mas buscados</h4>
+           
         <section id="compareArticle" class="compare-article max-width">
             <!--Seccion creada dinamicamente
                 <section class="compare-article max-width">
@@ -89,101 +90,36 @@
                             </a>
                             <a href="#" class="heart-shape"></a>
                         </div>
-                    </article>
-            -->
+                    </article>-->   
         </section>
-
+        <h4 class="title">Busca por Categoria</h4>
         <section class="container">
-            <article class="container-carousel">
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="/static/logos/publilor.jpg'"class="d-block w-100" alt="">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="/static/logos/publimac.jpg'" class="d-block w-100" alt="">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="/static/logos/publimay.jpg" class="d-block w-100" alt="">
-                        </div>
-                        <div class="carousel-item">
-                            <img src= "/static/logos/publirevlon.jpg" class="d-block w-100" alt="">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="/static/logos/publiUrban.jpg" class="d-block w-100" alt="">
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
+            <article class="container-vdo">
+                <img src="/static/logos/ROSTRO.jpg"></img>
             </article>
             <article class="container-vdo">
-                <video controls poster="/static/logos/logo.jpeg">
-                    <source type="video/webm" src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.webm"/>
-                    <source type="video/mp4" src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.mp4"/>
-                </video>
-                <figure>
-                    <img src="" alt=""/>
-                </figure>
-                <video controls poster= "/static/logos/make_logo.png">
-                    <source type="video/webm" src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.webm"/>
-                    <source type="video/mp4" src="https://cdn.videvo.net/videvo_files/video/premium/video0036/small_watermarked/computer_code00_preview.mp4"/>
-                </video>
-                <figure>
-                    <img src="" alt=""/>
-                </figure>
+                <img src="/static/logos/LANZAMIENTO.jpg"></img>
+            </article>
+            <article class="container-vdo">
+                <img src="/static/logos/OFERTAS.png"></img>
             </article>
         </section>
 
-        <section class="trademarks">
-            <img src="/static/logos/BANERMARCASg.png"/>
-        </section>
-
-        <footer class="footer">
-            <h6>
-                Siguenos en nuestras Redes Sociales
-            </h6>
-            <img
-                src="https://images.vexels.com/media/users/3/140687/isolated/preview/f705441ceeb70b9920ce6c37d80f5603-linkedin-distorsionado-icono-redondo-by-vexels.png"
-                alt="Linkedin"
-            />
-            <img
-                src="https://images.vexels.com/media/users/3/137253/isolated/preview/90dd9f12fdd1eefb8c8976903944c026-icono-de-facebook-logo-by-vexels.png"
-                alt="facebbok"
-            />
-            <img
-                src="https://images.vexels.com/media/users/3/137419/isolated/preview/b1a3fab214230557053ed1c4bf17b46c-icono-de-twitter-logo-by-vexels.png"
-                alt="twiter"
-            />
-            <img
-                src="https://images.vexels.com/media/users/3/137380/isolated/preview/1b2ca367caa7eff8b45c09ec09b44c16-icono-de-instagram-logo-by-vexels.png"
-                alt="instagram"
-            />
-            <h6 class="footer-text">
-                &copy; 2020 Mundo Axin. Marca registrada.
-            </h6>
-        </footer>
-
+        {% include "products/footer.html" %}
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        
+        {% for products in product %}
         <script>
-            var imagen1 = "/static/logos/labial.jpg"
-            var imagen2 = "/static/logos/paletaSombras.jpeg"
-            var compare = "/compare"
+            var nameProduct = '{{ products.name_product }}'
+            var mark = '{{ products.mark }}'
+            var imagen1 = '{{ products.image }}'
+            var compare = "/compare/" 
+            var heartLink = "/wishlist/"
         </script>
+        {% endfor %}
+
         <script src="/static/js/app.js"></script>
     </body>
 </html>
